# quanta

./: .gitignore  CODE_STYLE.md  GEMINI.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
rules/: code_style.md  commit_style.md
src/quanta/: __init__.py  duckui.py
src/quanta/config/: README.md  __init__.py  _internal.py  data.yaml  factors.yaml  flow.yaml  libs.yaml  trade.yaml
src/quanta/data/: README.md  __init__.py
src/quanta/data/joinquant/: __init__.py
src/quanta/data/joinquant/dt_table/: __init__.py  main.py
src/quanta/data/joinquant/id_table/: __init__.py  main.py
src/quanta/data/joinquant/meta/: main.py
src/quanta/faclib/: README.md  __init__.py
src/quanta/faclib/_base/: main.py
src/quanta/faclib/barra/: __init__.py  _base.py  cn6.py  guide_base.md  guide_us4.md  us4.py  usa4.py
src/quanta/faclib/tech/: main.py
src/quanta/factors/: __init__.py
src/quanta/factors/_base/: main.py
src/quanta/factors/barra/: _base.py  usa4.py  use4.py
src/quanta/libs/: __init__.py
src/quanta/libs/_flow/: README.md  __init__.py  _connect.py  main.py
src/quanta/libs/_flow/_cap/: base.py  core.py  main.py
src/quanta/libs/_flow/_extra_pandas/: core.py  main.py  old_main.py
src/quanta/libs/_flow/_main/: __init__.py  _base.py  _connect.py
src/quanta/libs/_flow/main/: __init__.py  base.py
src/quanta/libs/_pandas/: README.md  __init__.py
src/quanta/libs/db/: README.md  main.py
src/quanta/libs/utils/: README.md  __init__.py  _base.py  _decorator.py
src/quanta/strategys/: README.md  __init__.py
src/quanta/strategys/meta/: main.py
src/quanta/trade/: README.md  __init__.py  main.py
src/quanta/trade/account/: main.py
src/quanta/trade/pipline/: __init__.py
(+27 files in other folders)
