# D:\codes\quanta\pyproject.toml
[project]
name = "python-quanta" # 你的项目名称，建议与你的顶级包名（例如 src/quanta）一致
version = "0.4.1" # 项目版本号
description = "A quantitative analysis project for financial data." # 项目的简短描述
readme = "README.md" # 指向你的 README 文件
requires-python = ">=3.9" # 项目所需的 Python 版本
#license = { text = "MIT" } # 示例许可证，你可以改为你的实际许可证，或指向 "LICENSE" 文件

keywords = ["quantitative", "finance", "data-analysis"] # 关键词，方便搜索

# 项目的作者信息
authors = [
    { name = "Porco Rosso", email = "porcorossobaojiel@gmail.com" },
]

# 项目主页（可选）
urls = { Homepage = "https://github.com/porcorossobaojie/quanta.git" }

# 项目运行时依赖
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "tomlkit>=0.11.0",
    "python-dotenv>=0.19.0",
    "python-box>=5.4.0",
    "duckdb>=0.8.0",
    "jqdatasdk>=1.8.0",
    "matplotlib>=3.5.0",
    "pymysql>=1.0.0",
    "sqlalchemy>=1.4.0",
    "statsmodels>=0.13.0",
]

# 可选依赖，例如开发、测试工具
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "flake8>=4.0.0",
    "mypy>=0.910",
    "ipython>=8.0.0",
    "black>=22.0.0", # 代码格式化工具
    "isort>=5.0.0", # 导入排序工具
]

# 构建系统配置
[build-system]
requires = ["setuptools>=61.0", "wheel"] # 默认使用 setuptools 构建
build-backend = "setuptools.build_meta"

# Setuptools 特定配置
[tool.setuptools]
package-data = {"quanta.config" = ["*.yaml"]}
# 告诉 setuptools 在 'src' 目录中查找包
# 如果你的代码是直接放在 src/quanta 这样的结构下，且 quanta 是顶层包名
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

# 其他工具的配置，例如 Black
[tool.black]
line-length = 88
target-version = ['py39'] # 根据你的 Python 版本调整

# 其他工具的配置，例如 MyPy
[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
